prometheus/55-AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-kiali-to-prometheus
  namespace: monitoring
spec:
  action: ALLOW
  rules:
    - from:
      - source:
          namespaces: ["istio-system"]
